--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Õpilasfirma Laptap</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/general.css" />
   </head>
@@ -33,11 +36,15 @@
     </header>
     <main class="main">
       <section class="section-hero bg-primary outer-container">
-        <h1 class="heading-primary-dark">Eestimaised
+        <h1 class="heading-primary-dark">
+          Eestimaised
           <span class="heading-primary-light">Sülearvutilauad</span>
         </h1>
-        
-      </h1>
+
+        <p class="heading-primary-paragraph">
+          Kaitske oma arvutit ülekuumenemise, määrdumise ning eluea vähenemise
+          eest. Hoidke kokku hoolduskuludelt.
+        </p>
       </section>
     </main>
   </body>
