work on hero section's CSS and HTMl

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
           Kaitske oma arvutit ülekuumenemise, määrdumise ning eluea vähenemise
           eest. Hoidke kokku hoolduskuludelt.
         </p>
+
+        <a href="#" class="btn-primary">Tellima</a>
+        <a href="#" class="btn-secondary">Textnr2</a>
+        <img class="hero-img" src="hero.jpg" alt="Pilt meie sülearvutilauast" />
       </section>
     </main>
   </body>
