Start about us section

--- a/index.html
+++ b/index.html
@@ -51,6 +51,22 @@
         <a href="#" class="btn-secondary">Textnr2</a>
         <img class="hero-img" src="hero.jpg" alt="Pilt meie sülearvutilauast" />
       </section>
+
+      <section class="section-about bg-white outer-container">
+        <p class="subheading">Tutvustus</p>
+        <h2 class="heading-secondary">Meie õpilasfirmast</h2>
+        <img
+          class="about-img"
+          src="hero.jpg"
+          alt="Pilt meie sülearvutilauast"
+        />
+        <p class="about-paragraph">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt,
+          molestias. Veniam eaque molestiae odio itaque quo, numquam ab ea
+          libero. Cumque impedit iste consequuntur excepturi provident nihil
+          nobis porro commodi.
+        </p>
+      </section>
     </main>
   </body>
 </html>
