Work on 'about product' section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </nav>
     </header>
     <main class="main">
-      <section class="section-hero bg-primary outer-container">
+      <section class="section-hero bg-primary outer-container p-btm-64">
         <h1 class="heading-primary-dark">
           Eestimaised
           <span class="heading-primary-light">Sülearvutilauad</span>
@@ -52,7 +52,7 @@
         <img class="hero-img" src="hero.jpg" alt="Pilt meie sülearvutilauast" />
       </section>
 
-      <section class="section-about bg-white outer-container">
+      <section class="section-about bg-white outer-container p-btm-64 p-top-64">
         <p class="subheading">Tutvustus</p>
         <h2 class="heading-secondary">Meie õpilasfirmast</h2>
         <img
@@ -66,6 +66,28 @@
           libero. Cumque impedit iste consequuntur excepturi provident nihil
           nobis porro commodi.
         </p>
+      </section>
+      <section
+        class="section-tootest bg-blueish outer-container p-top-64 p-btm-64"
+      >
+        <p class="subheading">Tootest</p>
+        <h2 class="heading-secondary">Kompaktsed sülearvutilauad</h2>
+        <div class="features-container">
+          <div class="feature-card">
+            <img
+              class="feature-card-icon"
+              src="leaf.svg"
+              alt="Environmentally-friendly icon"
+            />
+            <div class="feature-card-text">
+              <p class="feature-card-heading">Keskkonnasõbralik</p>
+              <p class="feature-card-description">
+                Lauad valmivad vineerijääkidest, mis oleksid vastasel juhul
+                läinud äraviskamisele.
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
