--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/queries.css" />
+    <script defer src="script.js"></script>
   </head>
   <body>
     <header class="header outer-container bg-primary">
@@ -67,8 +68,40 @@
           nobis porro commodi.
         </p>
       </section>
+
       <section
-        class="section-tootest bg-blueish outer-container p-top-64 p-btm-64"
+        class="section-benefits bg-blueish outer-container p-btm-64 p-top-64"
+      >
+        <div class="section-benefits-container">
+          <div class="section-benefits-titles">
+            <p class="subheading">Kasulikkus</p>
+            <h2 class="heading-secondary">
+              Suurepärane disain ja kasutusmugavus
+            </h2>
+          </div>
+          <div class="section-benefits-cards">
+            <div class="section-benefits-card">
+              <img src="tick.svg" alt="Tick icon" class="benefit-card-img" />
+              <p class="benefit-card-text">Pikendage sülearvuti eluiga</p>
+            </div>
+            <div class="section-benefits-card">
+              <img src="tick.svg" alt="Tick icon" class="benefit-card-img" />
+              <p class="benefit-card-text">Vältige arvuti ülekuumenemist</p>
+            </div>
+            <div class="section-benefits-card">
+              <img src="tick.svg" alt="Tick icon" class="benefit-card-img" />
+              <p class="benefit-card-text">Hoidke arvuti puhtana</p>
+            </div>
+            <div class="section-benefits-card">
+              <img src="tick.svg" alt="Tick icon" class="benefit-card-img" />
+              <p class="benefit-card-text">Säästke hoolduskuludelt</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="section-tootest bg-white outer-container p-top-64 p-btm-64"
       >
         <p class="subheading">Tootest</p>
         <h2 class="heading-secondary">Kompaktsed sülearvutilauad</h2>
