Add placeholders to features section

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
             <div class="section-benefits-card">
               <img src="tick.svg" alt="Tick icon" class="benefit-card-img" />
-              <p class="benefit-card-text">Vältige arvuti ülekuumenemist</p>
+              <p class="benefit-card-text">Vältige arvuti kuumenemist</p>
             </div>
             <div class="section-benefits-card">
               <img src="tick.svg" alt="Tick icon" class="benefit-card-img" />
@@ -106,6 +106,51 @@
         <p class="subheading">Tootest</p>
         <h2 class="heading-secondary">Kompaktsed sülearvutilauad</h2>
         <div class="features-container">
+          <div class="feature-card">
+            <img
+              class="feature-card-icon"
+              src="leaf.svg"
+              alt="Environmentally-friendly icon"
+            />
+            <div class="feature-card-text">
+              <p class="feature-card-heading">Keskkonnasõbralik</p>
+              <p class="feature-card-description">
+                Lauad valmivad vineerijääkidest, mis oleksid vastasel juhul
+                läinud äraviskamisele.
+              </p>
+            </div>
+          </div>
+
+          <div class="feature-card">
+            <img
+              class="feature-card-icon"
+              src="compact.svg"
+              alt="Environmentally-friendly icon"
+            />
+            <div class="feature-card-text">
+              <p class="feature-card-heading">Kompaktne</p>
+              <p class="feature-card-description">
+                Kuna laud on kokkuvolditav, saab seda imelihtsalt hoiustada ja
+                vajadusel kaasas kanda.
+              </p>
+            </div>
+          </div>
+
+          <div class="feature-card">
+            <img
+              class="feature-card-icon"
+              src="leaf.svg"
+              alt="Environmentally-friendly icon"
+            />
+            <div class="feature-card-text">
+              <p class="feature-card-heading">Keskkonnasõbralik</p>
+              <p class="feature-card-description">
+                Lauad valmivad vineerijääkidest, mis oleksid vastasel juhul
+                läinud äraviskamisele.
+              </p>
+            </div>
+          </div>
+
           <div class="feature-card">
             <img
               class="feature-card-icon"
