Start work on producing section

--- a/index.html
+++ b/index.html
@@ -167,6 +167,54 @@
           </div>
         </div>
       </section>
+
+      <section
+        class="section-tootmine bg-primary outer-container p-top-64 p-btm-64"
+      >
+        <p class="subheading">Tootmine</p>
+        <h2 class="heading-secondary">Kuidas teie laud valmib?</h2>
+
+        <div class="producing-container">
+          <div class="producing-step">
+            <p class="producing-step-number">01</p>
+            <p class="producing-step-heading">Materjali valimine</p>
+            <p class="producing-step-description">
+              Valime teie laua jaoks välja sobivad vineeritükid. Kasutame
+              võimalikult suures osas vineerijääke, mis on kvaliteedilt võrdsed
+              uuele vineerile, kuid mis oleksid vastasel juhul läinud
+              äraviskamisele.
+            </p>
+          </div>
+
+          <div class="producing-step">
+            <p class="producing-step-number">02</p>
+            <p class="producing-step-heading">Töötlus</p>
+            <p class="producing-step-description">
+              Vineeritükid läbivad CNC freesimise ja laserlõikuse. (lakk, õli
+              värv vms teeme ka?).
+            </p>
+          </div>
+
+          <div class="producing-step">
+            <p class="producing-step-number">03</p>
+            <p class="producing-step-heading">Monteerimine</p>
+            <p class="producing-step-description">
+              Lõigatud vineeritükid monteeritakse käsitsi meie õpilasfirma
+              liikmete poolt. Seejärel toimub toote kvaliteedikontroll ning
+              toode pakendatakse.
+            </p>
+          </div>
+
+          <div class="producing-step">
+            <p class="producing-step-number">04</p>
+            <p class="producing-step-heading">Müük ja transport</p>
+            <p class="producing-step-description">
+              Teie laud on valmis kasutamiseks ning transporditakse soovitud
+              asukohta.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
