--- a/index.html
+++ b/index.html
@@ -215,6 +215,37 @@
           </div>
         </div>
       </section>
+
+      <section
+        class="section-tellima bg-dark outer-container p-top-64 p-btm-64"
+      >
+        <div class="ordering-container">
+          <img
+            class="product-img"
+            src="hero.jpg"
+            alt="Pilt meie sülearvutilauast"
+          />
+          <div class="product-text">
+            <h2 class="product-title">Sülearvutilaud</h2>
+            <p class="product-description">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+            <div class="product-prices">
+              <p class="product-price">
+                50€<span class="product-price-light">/laud</span>
+              </p>
+              <p class="product-price-savings">Säästa laadahinnast x%</p>
+            </div>
+            <a class="btn-order" href="#">Tellima</a>
+            <p class="order-info">
+              Hinnale võib lisanduda transpordikulu. Lisainfo: KKK
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
