Add faq heading

--- a/index.html
+++ b/index.html
@@ -246,6 +246,12 @@
           </div>
         </div>
       </section>
+      <section class="section-faq p-btm-64 p-top-64 outer-container">
+        <h2 class="heading-faq">Korduma kippuvad küsimused</h2>
+        <button class="faq-question">
+          Kui kaua aega kulub toote transpordiks?
+        </button>
+      </section>
     </main>
   </body>
 </html>
