Finish faq buttons height animation

--- a/index.html
+++ b/index.html
@@ -248,9 +248,75 @@
       </section>
       <section class="section-faq p-btm-64 p-top-64 outer-container">
         <h2 class="heading-faq">Korduma kippuvad küsimused</h2>
-        <button class="faq-question">
-          Kui kaua aega kulub toote transpordiks?
-        </button>
+        <div class="faq-questions-container">
+          <button class="faq-question">
+            <div class="faq-question-flex">
+              <p>Kui kaua aega kulub toote transpordiks?</p>
+              <img
+                src="downarrow.svg"
+                alt="Downarrow to open a frequently asked question."
+                class="faq-arrow"
+              />
+            </div>
+            <p class="faq-answer hidden">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
+              numquam ab ea libero. Cumque impedit iste consequuntur excepturi
+              provident nihil nobis porro commodi.
+            </p>
+          </button>
+
+          <button class="faq-question">
+            <div class="faq-question-flex">
+              <p>Kui kaua aega kulub toote transpordiks?</p>
+              <img
+                src="downarrow.svg"
+                alt="Downarrow to open a frequently asked question."
+                class="faq-arrow"
+              />
+            </div>
+            <p class="faq-answer hidden">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
+              numquam ab ea libero. Cumque impedit iste consequuntur excepturi
+              provident nihil nobis porro commodi.
+            </p>
+          </button>
+
+          <button class="faq-question">
+            <div class="faq-question-flex">
+              <p>Kui kaua aega kulub toote transpordiks?</p>
+              <img
+                src="downarrow.svg"
+                alt="Downarrow to open a frequently asked question."
+                class="faq-arrow"
+              />
+            </div>
+            <p class="faq-answer hidden">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
+              numquam ab ea libero. Cumque impedit iste consequuntur excepturi
+              provident nihil nobis porro commodi.
+            </p>
+          </button>
+
+          <button class="faq-question">
+            <div class="faq-question-flex">
+              <p>Kui kaua aega kulub toote transpordiks?</p>
+              <img
+                src="downarrow.svg"
+                alt="Downarrow to open a frequently asked question."
+                class="faq-arrow"
+              />
+            </div>
+            <p class="faq-answer hidden">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+              Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
+              numquam ab ea libero. Cumque impedit iste consequuntur excepturi
+              provident nihil nobis porro commodi.
+            </p>
+          </button>
+        </div>
       </section>
     </main>
   </body>
