finish footer contact part

--- a/index.html
+++ b/index.html
@@ -248,76 +248,111 @@
       </section>
       <section class="section-faq p-btm-64 p-top-64 outer-container">
         <h2 class="heading-faq">Korduma kippuvad küsimused</h2>
-        <div class="faq-questions-container">
-          <button class="faq-question">
-            <div class="faq-question-flex">
-              <p>Kui kaua aega kulub toote transpordiks?</p>
-              <img
-                src="downarrow.svg"
-                alt="Downarrow to open a frequently asked question."
-                class="faq-arrow"
-              />
-            </div>
-            <p class="faq-answer hidden">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
-              numquam ab ea libero. Cumque impedit iste consequuntur excepturi
-              provident nihil nobis porro commodi.
-            </p>
-          </button>
+        <div class="flex-questions-text-container">
+          <div class="faq-questions-container">
+            <button class="faq-question">
+              <div class="faq-question-flex">
+                <p>Kui kaua aega kulub toote transpordiks?</p>
+                <img
+                  src="downarrow.svg"
+                  alt="Downarrow to open a frequently asked question."
+                  class="faq-arrow"
+                />
+              </div>
+              <p class="faq-answer hidden">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
+                numquam ab ea libero. Cumque impedit iste consequuntur excepturi
+                provident nihil nobis porro commodi.
+              </p>
+            </button>
 
-          <button class="faq-question">
-            <div class="faq-question-flex">
-              <p>Kui kaua aega kulub toote transpordiks?</p>
-              <img
-                src="downarrow.svg"
-                alt="Downarrow to open a frequently asked question."
-                class="faq-arrow"
-              />
-            </div>
-            <p class="faq-answer hidden">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
-              numquam ab ea libero. Cumque impedit iste consequuntur excepturi
-              provident nihil nobis porro commodi.
-            </p>
-          </button>
+            <button class="faq-question">
+              <div class="faq-question-flex">
+                <p>Kui kaua aega kulub toote transpordiks?</p>
+                <img
+                  src="downarrow.svg"
+                  alt="Downarrow to open a frequently asked question."
+                  class="faq-arrow"
+                />
+              </div>
+              <p class="faq-answer hidden">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
+                numquam ab ea libero. Cumque impedit iste consequuntur excepturi
+                provident nihil nobis porro commodi.
+              </p>
+            </button>
 
-          <button class="faq-question">
-            <div class="faq-question-flex">
-              <p>Kui kaua aega kulub toote transpordiks?</p>
-              <img
-                src="downarrow.svg"
-                alt="Downarrow to open a frequently asked question."
-                class="faq-arrow"
-              />
-            </div>
-            <p class="faq-answer hidden">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
-              numquam ab ea libero. Cumque impedit iste consequuntur excepturi
-              provident nihil nobis porro commodi.
-            </p>
-          </button>
+            <button class="faq-question">
+              <div class="faq-question-flex">
+                <p>Kui kaua aega kulub toote transpordiks?</p>
+                <img
+                  src="downarrow.svg"
+                  alt="Downarrow to open a frequently asked question."
+                  class="faq-arrow"
+                />
+              </div>
+              <p class="faq-answer hidden">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
+                numquam ab ea libero. Cumque impedit iste consequuntur excepturi
+                provident nihil nobis porro commodi.
+              </p>
+            </button>
 
-          <button class="faq-question">
-            <div class="faq-question-flex">
-              <p>Kui kaua aega kulub toote transpordiks?</p>
-              <img
-                src="downarrow.svg"
-                alt="Downarrow to open a frequently asked question."
-                class="faq-arrow"
-              />
-            </div>
-            <p class="faq-answer hidden">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-              Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
-              numquam ab ea libero. Cumque impedit iste consequuntur excepturi
-              provident nihil nobis porro commodi.
-            </p>
-          </button>
+            <button class="faq-question">
+              <div class="faq-question-flex">
+                <p>Kui kaua aega kulub toote transpordiks?</p>
+                <img
+                  src="downarrow.svg"
+                  alt="Downarrow to open a frequently asked question."
+                  class="faq-arrow"
+                />
+              </div>
+              <p class="faq-answer hidden">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Incidunt, molestias. Veniam eaque molestiae odio itaque quo,
+                numquam ab ea libero. Cumque impedit iste consequuntur excepturi
+                provident nihil nobis porro commodi.
+              </p>
+            </button>
+          </div>
+          <p class="faq-text">
+            Kui su küsimus jääb vastuseta,
+            <span class=""
+              >võta meiega julgelt ühendust telefonil x või emailil x.</span
+            >
+          </p>
         </div>
       </section>
     </main>
+    <footer class="footer outer-container bg-primary p-btm-64 p-top-64">
+      <img src="logo1.svg" class="logo" alt="Laptap logo" />
+      <div class="footer-flex-container">
+        <div class="footer-contact-info">
+          <div class="footer-contact">
+            <img
+              src="school.svg"
+              class="footer-contact-icon"
+              alt="school icon"
+            />
+            <p class="footer-contact-text">Tallinna Lilleküla Gümnaasium</p>
+          </div>
+          <div class="footer-contact">
+            <img src="call.svg" class="footer-contact-icon" alt="phone icon" />
+            <a class="footer-contact-text" href="tel:+37256843090"
+              >+372 595 959 595</a
+            >
+          </div>
+          <div class="footer-contact">
+            <img src="email.svg" class="footer-contact-icon" alt="email icon" />
+            <a class="footer-contact-text" href="mailto:tere@laptap.com"
+              >tere@laptap.com</a
+            >
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
