--- a/index.html
+++ b/index.html
@@ -327,31 +327,36 @@
         </div>
       </section>
     </main>
-    <footer class="footer outer-container bg-primary p-btm-64 p-top-64">
-      <img src="logo1.svg" class="logo" alt="Laptap logo" />
+    <footer class="footer outer-container bg-primary p-btm-48 p-top-48">
+      <img src="logo1.svg" class="logo logo-footer" alt="Laptap logo" />
       <div class="footer-flex-container">
-        <div class="footer-contact-info">
+        <div class="footer-container">
           <div class="footer-contact">
             <img
               src="school.svg"
               class="footer-contact-icon"
               alt="school icon"
             />
-            <p class="footer-contact-text">Tallinna Lilleküla Gümnaasium</p>
+            <p class="footer-text">Tallinna Lilleküla Gümnaasium</p>
           </div>
           <div class="footer-contact">
             <img src="call.svg" class="footer-contact-icon" alt="phone icon" />
-            <a class="footer-contact-text" href="tel:+37256843090"
-              >+372 595 959 595</a
-            >
+            <a class="footer-text" href="tel:+37256843090">+372 595 959 595</a>
           </div>
           <div class="footer-contact">
             <img src="email.svg" class="footer-contact-icon" alt="email icon" />
-            <a class="footer-contact-text" href="mailto:tere@laptap.com"
+            <a class="footer-text" href="mailto:tere@laptap.com"
               >tere@laptap.com</a
             >
           </div>
         </div>
+        <div class="footer-container">
+          <a href="#" class="footer-text">Müügi- ja tagastustingimused</a>
+          <a href="#" class="footer-text">Privaatsuspoliitika</a>
+        </div>
+        <p class="footer-text">
+          Copyright © 2021 Laptap. Kõik õigused kaitstud.
+        </p>
       </div>
     </footer>
   </body>
