Finish mobile hamburger menu with animations

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
       <div class="navigation-links-container hidden">
         <button class="close-button"><img src="close.svg" alt="close icon"/></button>
         <ul class="navigation-links">
-          <li class="navigation-link"><a class="navigation-link-anchor" href="#">Meist</a></li>
-          <li class="navigation-link"><a class="navigation-link-anchor" href="#">Tootest</a></li>
-          <li class="navigation-link"><a class="navigation-link-anchor" href="#">Tootmine</a></li>
+          <li class="navigation-link"><a class="navigation-link-anchor" href="#meist">Meist</a></li>
+          <li class="navigation-link"><a class="navigation-link-anchor" href="#tootest">Tootest</a></li>
+          <li class="navigation-link"><a class="navigation-link-anchor" href="#tootmine">Tootmine</a></li>
           <li class="navigation-link"><a class="navigation-link-anchor" href="#kkk">KKK</a></li>
-          <li class="navigation-link navigation-link-cta"><a class="navigation-link-anchor" href="#kkk">Tellima</a></li>
+          <li class="navigation-link navigation-link-cta"><a class="navigation-link-anchor" href="#tellima">Tellima</a></li>
         </ul>
       </div>
       </nav>
@@ -60,12 +60,12 @@
           eest. Hoidke kokku hoolduskuludelt.
         </p>
 
-        <a href="#" class="btn-primary">Tellima</a>
-        <a href=".product-img" class="btn-secondary">Galerii</a>
+        <a href="#tellima" class="btn-primary">Tellima</a>
+        <a href="#tellima" class="btn-secondary">Galerii</a>
         <img class="hero-img" src="hero.jpg" alt="Pilt meie sülearvutilauast" />
       </section>
 
-      <section class="section-about bg-white outer-container p-btm-64 p-top-64">
+      <section class="section-about bg-white outer-container p-btm-64 p-top-64" id="meist">
         <p class="subheading">Tutvustus</p>
         <h2 class="heading-secondary">Meie õpilasfirmast</h2>
         <img
@@ -82,7 +82,7 @@
       </section>
 
       <section
-        class="section-benefits bg-blueish outer-container p-btm-64 p-top-64"
+        class="section-benefits bg-blueish outer-container p-btm-64 p-top-64" 
       >
         <div class="section-benefits-container">
           <div class="section-benefits-titles">
@@ -113,7 +113,7 @@
       </section>
 
       <section
-        class="section-tootest bg-white outer-container p-top-64 p-btm-64"
+        class="section-tootest bg-white outer-container p-top-64 p-btm-64" id="tootest"
       >
         <p class="subheading">Tootest</p>
         <h2 class="heading-secondary">Kompaktsed sülearvutilauad</h2>
@@ -181,7 +181,7 @@
       </section>
 
       <section
-        class="section-tootmine bg-primary outer-container p-top-64 p-btm-64"
+        class="section-tootmine bg-primary outer-container p-top-64 p-btm-64" id="tootmine"
       >
         <p class="subheading">Tootmine</p>
         <h2 class="heading-secondary">Kuidas teie laud valmib?</h2>
@@ -229,7 +229,7 @@
       </section>
 
       <section
-        class="section-tellima bg-dark outer-container p-top-64 p-btm-64"
+        class="section-tellima bg-dark outer-container p-top-64 p-btm-64" id="tellima"
       >
         <div class="ordering-container">
           <div class="gallery" id="gallery" >
@@ -302,7 +302,7 @@
           </div>
         </div>
       </section>
-      <section class="section-faq p-btm-64 p-top-64 outer-container">
+      <section class="section-faq p-btm-64 p-top-64 outer-container" id="kkk">
         <h2 class="heading-faq" id="kkk">Korduma kippuvad küsimused</h2>
         <div class="flex-questions-text-container">
           <div class="faq-questions-container">
