Add media queries for bigger mobile devices

--- a/index.html
+++ b/index.html
@@ -303,12 +303,12 @@
         </div>
       </section>
       <section class="section-faq p-btm-64 p-top-64 outer-container" id="kkk">
-        <h2 class="heading-faq" id="kkk">Korduma kippuvad küsimused</h2>
+        <h2 class="heading-faq">Korduma kippuvad küsimused</h2>
         <div class="flex-questions-text-container">
           <div class="faq-questions-container">
             <button class="faq-question">
               <div class="faq-question-flex">
-                <p>Kui kaua aega kulub toote transpordiks?</p>
+                <p class="faq-question-title">Kui kaua aega kulub toote transpordiks?</p>
                 <img
                   src="downarrow.svg"
                   alt="Downarrow to open a frequently asked question."
@@ -325,7 +325,7 @@
 
             <button class="faq-question">
               <div class="faq-question-flex">
-                <p>Kui kaua aega kulub toote transpordiks?</p>
+                <p class="faq-question-title">Kui kaua aega kulub toote transpordiks?</p>
                 <img
                   src="downarrow.svg"
                   alt="Downarrow to open a frequently asked question."
@@ -342,7 +342,7 @@
 
             <button class="faq-question">
               <div class="faq-question-flex">
-                <p>Kui kaua aega kulub toote transpordiks?</p>
+                <p class="faq-question-title">Kui kaua aega kulub toote transpordiks?</p>
                 <img
                   src="downarrow.svg"
                   alt="Downarrow to open a frequently asked question."
@@ -359,7 +359,7 @@
 
             <button class="faq-question">
               <div class="faq-question-flex">
-                <p>Kui kaua aega kulub toote transpordiks?</p>
+                <p class="faq-question-title">Kui kaua aega kulub toote transpordiks?</p>
                 <img
                   src="downarrow.svg"
                   alt="Downarrow to open a frequently asked question."
