Add desktop navigation on tablets

--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
           <li class="navigation-link navigation-link-cta"><a class="navigation-link-anchor" href="#tellima">Tellima</a></li>
         </ul>
       </div>
+
+      
+        <ul class="navigation-links-desktop">
+          <li class="navigation-link-desktop"><a class="navigation-link-anchor-desktop" href="#meist">Meist</a></li>
+          <li class="navigation-link-desktop"><a class="navigation-link-anchor-desktop" href="#tootest">Tootest</a></li>
+          <li class="navigation-link-desktop"><a class="navigation-link-anchor-desktop" href="#tootmine">Tootmine</a></li>
+          <li class="navigation-link-desktop"><a class="navigation-link-anchor-desktop" href="#kkk">KKK</a></li>
+          <li class="navigation-link-desktop navigation-link-cta-desktop"><a class="navigation-link-anchor-desktop" href="#tellima">Tellima</a></li>
+        </ul>
       </nav>
     </header>
     <main class="main">
@@ -376,7 +385,7 @@
           </div>
           <p class="faq-text">
             Kui su küsimus jääb vastuseta,
-            <span class=""
+            <span class="faq-text-green"
               >võta meiega julgelt ühendust telefonil x või emailil x.</span
             >
           </p>
