--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/queries.css" />
@@ -59,6 +60,7 @@
     </header>
     <main class="main">
       <section class="section-hero bg-primary outer-container p-btm-64">
+      <div class="hero-text-container">
         <h1 class="heading-primary-dark">
           Eestimaised
           <span class="heading-primary-light">Sülearvutilauad</span>
@@ -71,23 +73,30 @@
 
         <a href="#tellima" class="btn-primary">Tellima</a>
         <a href="#tellima" class="btn-secondary">Galerii</a>
+      </div>
+      <div class="hero-img-container">
         <img class="hero-img" src="hero.jpg" alt="Pilt meie sülearvutilauast" />
+      </div>
       </section>
 
       <section class="section-about bg-white outer-container p-btm-64 p-top-64" id="meist">
         <p class="subheading">Tutvustus</p>
         <h2 class="heading-secondary">Meie õpilasfirmast</h2>
+        <div class="about-flex">
+        <div class="about-img-container">
         <img
           class="about-img"
           src="hero.jpg"
           alt="Pilt meie sülearvutilauast"
         />
+      </div>
         <p class="about-paragraph">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt,
           molestias. Veniam eaque molestiae odio itaque quo, numquam ab ea
           libero. Cumque impedit iste consequuntur excepturi provident nihil
           nobis porro commodi.
         </p>
+      </div>
       </section>
 
       <section
