add desktop breakpoints

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <header class="header outer-container bg-primary">
+      <div class="max-width-container">
       <img src="logo1.svg" class="logo" alt="Laptap logo" />
       <nav class="nav">
         <svg
@@ -57,12 +58,14 @@
           <li class="navigation-link-desktop navigation-link-cta-desktop"><a class="navigation-link-anchor-desktop" href="#tellima">Tellima</a></li>
         </ul>
       </nav>
+    </div>
     </header>
     <main class="main">
       <section class="section-hero bg-primary outer-container p-btm-64">
+      <div class="max-width-container">
       <div class="hero-text-container">
         <h1 class="heading-primary-dark">
-          Eestimaised
+          Eestimaised<br>
           <span class="heading-primary-light">Sülearvutilauad</span>
         </h1>
 
@@ -77,9 +80,11 @@
       <div class="hero-img-container">
         <img class="hero-img" src="hero.jpg" alt="Pilt meie sülearvutilauast" />
       </div>
+      </div>
       </section>
 
       <section class="section-about bg-white outer-container p-btm-64 p-top-64" id="meist">
+        <div class="max-width-container">
         <p class="subheading">Tutvustus</p>
         <h2 class="heading-secondary">Meie õpilasfirmast</h2>
         <div class="about-flex">
@@ -97,12 +102,13 @@
           nobis porro commodi.
         </p>
       </div>
+    </div>
       </section>
 
       <section
         class="section-benefits bg-blueish outer-container p-btm-64 p-top-64" 
       >
-        <div class="section-benefits-container">
+        <div class="section-benefits-container max-width-container">
           <div class="section-benefits-titles">
             <p class="subheading">Kasulikkus</p>
             <h2 class="heading-secondary">
@@ -133,6 +139,7 @@
       <section
         class="section-tootest bg-white outer-container p-top-64 p-btm-64" id="tootest"
       >
+      <div class="max-width-container">
         <p class="subheading">Tootest</p>
         <h2 class="heading-secondary">Kompaktsed sülearvutilauad</h2>
         <div class="features-container">
@@ -196,11 +203,13 @@
             </div>
           </div>
         </div>
+      </div>
       </section>
 
       <section
         class="section-tootmine bg-primary outer-container p-top-64 p-btm-64" id="tootmine"
       >
+      <div class="max-width-container">
         <p class="subheading">Tootmine</p>
         <h2 class="heading-secondary">Kuidas teie laud valmib?</h2>
 
@@ -244,12 +253,13 @@
             </p>
           </div>
         </div>
+      </div>
       </section>
 
       <section
         class="section-tellima bg-dark outer-container p-top-64 p-btm-64" id="tellima"
       >
-        <div class="ordering-container">
+        <div class="ordering-container max-width-container">
           <div class="gallery" id="gallery" >
             
             <img
@@ -321,6 +331,7 @@
           
       </section>
       <section class="section-faq p-btm-64 p-top-64 outer-container" id="kkk">
+        <div class="max-width-container">
         <h2 class="heading-faq">Korduma kippuvad küsimused</h2>
         <div class="flex-questions-text-container">
           <div class="faq-questions-container">
@@ -399,9 +410,11 @@
             >
           </p>
         </div>
+      </div>
       </section>
     </main>
     <footer class="footer outer-container bg-primary p-btm-48 p-top-48">
+      <div class="max-width-container">
       <img src="logo1.svg" class="logo logo-footer" alt="Laptap logo" />
       <div class="footer-flex-container">
         <div class="footer-container">
@@ -432,6 +445,7 @@
           Copyright © 2021 Laptap. Kõik õigused kaitstud.
         </p>
       </div>
+    </div>
     </footer>
   </body>
 </html>
